Minor editing to document changes to the filters

--- a/DScaler/Help/GradualNoise.htm
+++ b/DScaler/Help/GradualNoise.htm
@@ -66,14 +66,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-						  Noise Reduction
-					  </FONT></B>
+              Noise Reduction
+            </FONT></B>
           </P>
           <P>
             The higher you set it, the more you&rsquo;ll cut down on noise&nbsp;&mdash; but the more
             blurring you will see. In general, reasonable settings range from 10 (to soften
-            the occasional speckle without artifacts) to 25 (to reduce noise with minimal
-            artifacts) to 45 (for better reduction, but visible blurring) up to 80 (to average out
+            the occasional speckle without artifacts) to 20 (to reduce noise with minimal
+            artifacts) to 40 (for better reduction, but visible blurring) up to 70 (to average out
             really heavy noise at the cost of bad blurring). At extremely high <FONT COLOR=
             "#993300">Noise Reduction</FONT> values, you&rsquo;ll start to see artifactual
             vertical lines.
@@ -85,18 +85,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-						  Fast Memory Access
-					  </FONT></B>
+              Fast Memory Access
+            </FONT></B>
           </P>
           <P>
-						 This is a <A HREF="Fast Memory Access.htm">compatability
-						 setting</A> which should normally be turned on.
+            This is a <A HREF="Fast Memory Access.htm">compatibility
+            setting</A> which should normally be turned on.
           </P>
           <HR>
           <P>
             <B><FONT FACE="Arial" SIZE="4">
-						  Noise Notes
-					  </FONT></B>
+              Noise Notes
+            </FONT></B>
           </P>
           <P>
             You might want to take a look at <A HREF=
@@ -108,6 +108,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <A HREF="Noise.HTM">Temporal Noise</A> filter. Together they give you the &ldquo;comical
             posterization and speckling&rdquo; filter.
           </P>
+					<HR>
+          <P>
+            <B><FONT FACE="Arial" SIZE="4">
+              Filter changes
+            </FONT></B>
+          </P>
+					<P>
+					DScaler version 4.1 &mdash; Slightly changed the amount of blending to
+					more closely approximate the calculated ideal.  As a side effect, you
+					may want to drop your <FONT COLOR="#993300">Noise Reduction</FONT> setting
+					by a few ponits.
+					</P>
           <!-- #EndEditable -->
         </TD>
       </TR>
