Corrected a chip name

--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -80,7 +80,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             be very worthwhile.
           </P>
 					<P>
-					  Note that the more recently supported cards&nbsp;&mdash; The SAA7134 and CT2388X&nbsp;&mdash;
+					  Note that the more recently supported cards&nbsp;&mdash; The SAA7134 and CX2388X&nbsp;&mdash;
 						both have a built-in 2D comb filter.  But since those filters work spatially, and
 						this one works temporally, there can be some benifit to using both.
 					</P>
