--- a/DScaler/Help/Histogram.htm
+++ b/DScaler/Help/Histogram.htm
@@ -77,14 +77,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
                 The brightness (&ldquo;Y&rdquo;)
               </LI>
               <LI>
-                The  color (red &ldquo;U&rdquo;,  blue &ldquo;V&rdquo;, or both)
+                The color (blue &ldquo;U&rdquo;,  red &ldquo;V&rdquo;, or both)
               </LI>
               <LI>
                 Or all three pixel components at once
               </LI>
             </UL>
             <P>
-              The brightness is displayed in white, &ldquo;U&rdquo; color in pink, and &ldquo;V&rdquo; color
+              The brightness is displayed in white, &ldquo;V&rdquo; color in pink, and &ldquo;U&rdquo; color
               in light blue.  Regardless of the <FONT COLOR="#993300">Display Mode</FONT>, a dotted yellow
               line will appear below the graph, showing the graph&rsquo;s full 256 value range.
             </P>
@@ -113,8 +113,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           histogram.
           </P>
           <P>
-          If you are using a composite NTSC or PAL connector or an internal tuner,
-					this is a good idea. 
+          If you are using a composite connector or an internal tuner for NTSC
+					or PAL (but not SECAM) video, this is a good idea. 
 					It gets rid of color crosstalk
           which would otherwise artifactually extend the range of the graph.
           </P>
