--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,36 +54,32 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.0.1</h1>
+<h1>DScaler - version 4.1.0</h1>
 
 <p>What's new:<br>
 <ul>
-<li>Redesigned core with support of multiple BT cards</li>
-<li>New MoComp deinterlacing mode</li>
-<li>Two improved Noise Filters</li>
-<li>New Histogram Filter</li>
-<li>Much better User Interface</li>
-<li>Support of TIFF and jpeg still files</li>
-<li>Playlist for stills</li>
-<li>Set of patterns to setup the overlay and the display</li>
-<li>Direct access to the stills taken during the current session</li>
-<li>Action added to search and lock the correct film mode</li>
-<li>New setup program with uninstall</li>
+<li>Support for CX2388x based cards</li>
+<li>Support for SAA7134 based cards</li>
+<li>DirectShow support for tuners and file (experimental feature)</li>
+<li>Skins & Toolbar (experimental feature)</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>Much better User Interface</li>
-<li>Teletext support improved</li> 
-<li>Additional Teletext languages</li>
-<li>Sharpness Filter now works with older (MMX/3DNOW) computers</li>
-<li>Some minor improvements to Temporal Comb Filter</li>
+<li>Audio Support for bt8x8 chips</li>
+<li>Noise Filters</li>
+<li>Logo Killer</li>
+<li>Support for full frequency scan for tuning</li> 
+<li>Improved tuner support</li> 
+<li>Improved tuner support</li> 
+<li>Lots of bug fixes</li> 
 </ul></p>
 
 <p>What's Experimental:
 <ul>
-<li>New audio code</li>
-<li>Colour Inversion Filter</li>
+<li>DirectShow support for tuners and file</li>
+<li>Skins & Toolbar</li>
+<li>New Settings by Channel code</li>
 </ul></p>
 
 <!-- #EndEditable -->
