Updated Teletext keyboard shortcuts

--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -976,6 +976,14 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
+            <p><small>Mixed Mode Toggle</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Shift-T</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
             <p><small>Next Page</small></p>
           </td>
           <td valign="bottom"> 
@@ -1004,6 +1012,30 @@ height="2"></td>
           </td>
           <td valign="bottom"> 
             <p><small>Cursor Up</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Search VideoText</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl-F</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Search Next</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>F3</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Search Previous</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Shift-F3</small></p>
           </td>
         </tr>
       </table>
