--- a/DScaler/Help/Teletext2.htm
+++ b/DScaler/Help/Teletext2.htm
@@ -71,14 +71,16 @@ height="2"></td>
 <tr><td></td>	<td>6: North Africa		</td><td></td><td>	</td>		<td></td><td>Arabic</td></tr>
 <tr><td></td>	<td>7: Middle East		</td><td></td><td>	</td>		<td></td><td>Hebrew, Arabic</td></tr>
 </table><br>
-<ul>
-<li>Finnish, Hungarian = Swedish</li>
-<li>Portuguese = Spanish</li>
-<li>Serbian, Croatian (Latin) = Slovenian</li>
-<li>Croatian (Cyrillic-1) = Serbian</li>
-<li>Bulgarian = Russian</li>
-<li>Lettish = Lithuanian</li>
-</ul>
+<h3>Unlisted Languages:</h3>
+<table border=0 cellspacing=0 cellpadding=0>
+<tr><td width=25></td><td><b><u>Language</u></b></td><td width=40></td><td><b><u>Same As</u></b></td></tr>
+<tr><td></td> <td>Finnish, Hungarian</td> <td></td> <td>Swedish</td> </tr>
+<tr><td></td> <td>Portuguese</td> <td></td> <td>Spanish</td> </tr>
+<tr><td></td> <td>Serbian, Croatian (Latin)</td> <td></td> <td>Slovenian</td> </tr>
+<tr><td></td> <td>Croatian (Cyrillic-1)</td> <td></td> <td>Serbian</td> </tr>
+<tr><td></td> <td>Bulgarian</td> <td></td> <td>Russian</td> </tr>
+<tr><td></td> <td>Lettish</td> <td></td> <td>Lithuanian</td> </tr>
+</table><br>
 <br>
 <h2>Show Page Subcode in OSD</h2>
 <b>Default: OFF</b><br>
@@ -97,7 +99,7 @@ height="2"></td>
 <br>
 <h2>High Granularity Caching</h2>
 <b>Default: OFF</b><br>
-<p>When this is set, instead of copying whole lines as defined by the <b><i>Page Lines Caching Control</i></b> option, only the error-free bytes are copied.  Poor Teletext signals may work better when this is set.  Teletext caching takes a little more processing when this is set.</p>
+<p>When this is set, instead of copying whole lines as defined by the <b><i>Page Lines Caching Control</i></b> option, only the error-free bytes in the lines are copied.  Poor Teletext signals may work better when this is set.  Teletext caching takes a little more processing when this is set.</p>
 <br>
 <h2>Substitute Errors with Spaces</h2>
 <b>Default: OFF</b><br>
