Prepare for new alpha

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,7 +54,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.0</h1>
+<h1>DScaler - version 4.1.6</h1>
 
 <p>What's new:<br>
 <ul>
@@ -62,6 +62,7 @@ height="2"></td>
 <li>Support for SAA7134 based cards</li>
 <li>DirectShow support for tuners and file (experimental feature)</li>
 <li>Skins & Toolbar (experimental feature)</li>
+<li>Resolution changing (experimental feature)</li>
 </ul></p>
 
 <p>What's Improved</p>
@@ -71,7 +72,6 @@ height="2"></td>
 <li>Logo Killer</li>
 <li>Support for full frequency scan for tuning</li> 
 <li>Improved tuner support</li> 
-<li>Improved tuner support</li> 
 <li>Lots of bug fixes</li> 
 </ul></p>
 
@@ -80,6 +80,8 @@ height="2"></td>
 <li>DirectShow support for tuners and file</li>
 <li>Skins & Toolbar</li>
 <li>New Settings by Channel code</li>
+<li>Timeshift</li>
+<li>Resolution changing</li>
 </ul></p>
 
 <!-- #EndEditable -->
